--- a/uploadDeneme.html
+++ b/uploadDeneme.html
@@ -48,7 +48,7 @@
             if (file >= 1096) {
               alert("File too Big, please select a file less than 4mb");
             } else {
-              alert("Dosya başarıyla yüklendi");
+              alert("Dosya başarıyla yüklendi!");
             }
           }
         }
